[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/ScenesBackground/LevelSelect.png" type="Texture" id=1]
[ext_resource path="res://script/GameMods.gd" type="Script" id=2]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/LevelButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 3 )

[node name="ModsSceneSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -344, -96 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 136.0
margin_top = 63.0
margin_right = 1100.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "Select Level"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 184.0
margin_top = 376.0
margin_right = -167.0
margin_bottom = -96.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 58.0
margin_right = 870.0
margin_bottom = 248.0
size_flags_horizontal = 4

[node name="mods" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 812.0
margin_bottom = 150.0
columns = 4

[node name="Falling" parent="MarginContainer/VBoxContainer/mods" instance=ExtResource( 4 )]

[node name="Mystery" parent="MarginContainer/VBoxContainer/mods" instance=ExtResource( 4 )]
margin_left = 204.0
margin_right = 404.0

[node name="Survive" parent="MarginContainer/VBoxContainer/mods" instance=ExtResource( 4 )]
margin_left = 408.0
margin_right = 608.0

[node name="TimeSurvive" parent="MarginContainer/VBoxContainer/mods" instance=ExtResource( 4 )]
margin_left = 612.0
margin_right = 812.0

[node name="Button" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 100.0
text = "Go Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/mods/Falling" to="." method="_on_Falling_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mods/Mystery" to="." method="_on_Mystery_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mods/Survive" to="." method="_on_Survive_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/mods/TimeSurvive" to="." method="_on_TimeSurvive_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_Go_Back_pressed"]
